src/views/Service/Service.scss
@import '../../styles/mixins.scss';
@import '../../styles/colors.scss';
@import '../../styles/fonts.scss';
@import '../../styles/breakpoints.scss';

.service__header {
  position: relative;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  padding: space(64);
  color: $white;

  .flex-container {
    max-width: 1260px;

    @include for-tablet-landscape-down {
      padding: 0 !important;
    }
  }

  button {
    &:hover {
      border-color: $white;
    }
  }

  &--activity {
    background-image: url('../../assets/images/backgrounds/activity-header-shape-lg.svg');

    @include for-tablet-portrait-down {
      background-image: url('../../assets/images/backgrounds/activity-header-shape-mobile.svg');
    }
  }

  &--group {
    background-image: url('../../assets/images/backgrounds/group-header-shape-lg.svg');

    @include for-tablet-portrait-down {
      background-image: url('../../assets/images/backgrounds/group-header-shape-mobile.svg');
    }
  }

  &--service {
    background-image: url('../../assets/images/backgrounds/service-header-shape-lg.svg');

    @include for-tablet-portrait-down {
      background-image: url('../../assets/images/backgrounds/service-header-shape-mobile.svg');
    }
    &:after {
      content: '' !important;
    }
  }

  @include for-phone-only {
    padding: space(32) space(24) 0 space(24) !important;
  }

  @include for-tablet-portrait-down {
    padding: space(32) space(24);
  }

  h1 {
    margin-bottom: space(20);
  }

  button {
    @include body-s;
    background-color: inherit;
    border: 2px solid $white;
    font-family: $font-primary;
    font-weight: normal;
    margin-left: space(12);

    @include for-phone-only {
      visibility: hidden;
    }
  }

  @include for-tablet-landscape-up {
    &:after {
      content: url('../../assets/images/trees/iceberg-small.svg');
      position: absolute;
      top: 0px;
      right: 32%;
    }
  }
}

.service__section {
  margin-top: space(12);
  margin-bottom: space(32) !important;
  width: 100%;
  align-items: stretch;

  .criteria_card:nth-of-type(odd) {
    background-color: $alabaster;
  }

  &--no-padding {
    @include for-tablet-landscape-up {
      padding: 0 !important;
    }
  }

  &--no-margin {
    margin-bottom: 0 !important;
  }
}

.service__header__logo {
  position: absolute;
  top: pxtorem(16px);
  right: 10%;
  background-size: 100% 100%;
  padding: space(20);

  @include for-phone-only {
    right: 0;
  }

  @include for-tablet-landscape-up {
    background-image: url('../../assets/images/backgrounds/service-logo-background.svg');
  }

  img {
    height: pxtorem(175px);

    @include for-tablet-portrait-down {
      height: pxtorem(50px);
      border-radius: 50%;
    }
  }

  @include for-tablet-landscape-up {
    &:before {
      content: url('../../assets/images/trees/iceberg-lg.svg');
      position: absolute;
      bottom: -15px;
      right: -60px;
    }

    &:after {
      content: url('../../assets/images/trees/peurto-small.svg');
      position: absolute;
      bottom: -15px;
      right: -105px;
    }
  }
}

.service__header__last-updated {
  @include body-s;

  span {
    font-family: $font-secondary;
    margin-left: space(8);
  }
}

.service__info {
  padding-top: space(32) !important;
  color: $san-juan;
  max-width: 1260px;

  @include for-phone-only {
    padding-left: 0 !important;
    padding-right: 0 !important;
  }

  p {
    font-size: pxtorem(18px);
  }
}

.service__info--left {
  width: 60%;
}

.service__info--right {
  width: 40%;
}

.service__info__cost {
  background-color: $iceberg !important;

  @include for-tablet-landscape-up {
    border-radius: 19px;
    padding: space(24);
    margin-right: 20%;
  }
}

.service__info__cost--header {
  font-family: $font-secondary;
}

.service__info__cost--sub-heading {
  color: $waikawa;
}

.service__info__cost--icon {
  color: $puerto-rico;
  font-size: 36px;
}

.service__info__cost--left {
  text-align: center;
}

.service__info__cost--right {
  margin-left: space(32);
  color: $san-juan;
}

.react-player__preview {
  border-radius: 19px;
}

.service__referral {
  background-color: $pink;
  padding: space(32) !important;
  position: relative;

  @include for-tablet-landscape-up {
    border-radius: 19px;

    &:after {
      content: url('../../assets/images/trees/iceberg-small.svg');
      position: absolute;
      top: -35px;
      right: 20px;
    }
  }

  &--desktop {
    margin-top: space(40);
  }
}

.service__refer-disclaimer {
  padding: space(16) 0;

  svg {
    color: $waikawa;
  }
}

.service__markdown {
  &--intro {
    p {
      @include body-l;
      margin-bottom: space(40);
      color: $san-juan;
    }
  }

  &--description {
    p {
      color: $lynch;
      margin: space(24) 0;

      &:first-of-type {
        margin-top: 0;
      }
    }

    ul li {
      display: inline;

      &:before {
        content: '•';
        margin: 0 pxtorem(4px);
        color: $downy;
      }
    }

    li > p {
      display: inline;
      hyphens: auto;
    }

    li {
      color: $lynch;
      font-family: $font-primary;
    }
  }

  h1,
  h2,
  h3 {
    @include heading-s;
  }

  a {
    color: $elm;
    font-size: inherit;
  }
}

.service__accordian {
  padding: space(24) space(12);
  width: 100%;

  button {
    text-align: left;

    h4 {
      display: inline;
    }
  }

  &:nth-of-type(odd) {
    background-color: $alabaster;

    .service__accordian-inner {
      background-color: $white;
      border-radius: 16px;
    }
  }

  &:nth-of-type(even) {
    .service__accordian-inner {
      background-color: $alabaster;
      border-radius: 16px;
    }
  }

  &--no-overflow {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
  }
}

.service__button-container {
  padding: space(24) !important;
}

.service__accordian-inner {
  font-size: $font-body-m;
  padding: space(16) !important;

  a {
    font-size: $font-body-m;
  }
}

.service__social-icon {
  margin: space(12);
}

.service__social-icon-container {
  text-align: center;
  padding-bottom: space(32);
}

.service__testimonial {
  background-image: url('../../assets/images/backgrounds/service-quote-shape.svg');
  background-size: 100% 100%;
  padding: space(8);

  p {
    font-family: $font-tertiary;
    font-size: pxtorem(30px);
    padding: space(8);
  }

  svg {
    font-size: pxtorem(46px);

    padding-right: space(10);

    @include for-tablet-landscape-down {
      padding-right: space(16);
    }
  }

  @include for-tablet-landscape-up {
    padding: space(32);
  }

  &--header {
    margin-top: space(32);
  }
}

.service__criteria {
  padding: 0 !important;
}

.service__media {
  margin: 0 !important;
}

.service__useful-info {
  margin-bottom: space(16) !important;

  @include for-tablet-landscape-up {
    background-color: $alabaster;
    border-radius: 19px;
  }

  p {
    font-size: $font-base;
    color: $gray;
    margin-top: space(12);
  }

  svg {
    color: #c3c3c3;

    @include for-tablet-landscape-up {
      font-size: pxtorem(36px);
      float: right;
    }
  }
}

.service__organisation {
  text-align: center;

  &--logo {
    margin-bottom: space(12) !important;

    img {
      border-radius: 9px;
    }
  }

  &--sidebar {
    background-color: $alabaster;
    padding: space(20) !important;
    border-radius: 19px;
  }
}

.service__right-column {
  padding: 0 !important;
}

.service__left-column {
  @include for-tablet-landscape-up {
    padding-right: space(32) !important;
  }
}

.service__cost-card {
  padding: 0 !important;
}

.service__video {
  padding: 0 !important;
  margin: 0 !important;
  width: 100%;
}

.service__contact-card {
  padding: 40 !important;
  background-color: $alabaster;
  border-radius: 19px;

  .flex-col {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  &--accordian {
    h4 {
      margin-bottom: space(8);
    }

    .service__social-icon-container {
      padding-bottom: 0;
    }
  }

  a {
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }
  }

  h4 {
    margin-bottom: space(8);
  }

  &--row {
    margin-top: space(40);

    svg {
      margin-right: space(8);
      color: $waikawa;
    }
  }
}

.service__share-card {
  background-image: url('../../assets/images/backgrounds/service-share-background.svg');
  background-repeat: no-repeat;
  background-size: contain;
  padding: space(20);

  h4 {
    display: inline;
    font-weight: normal;
    font-family: $font-primary;
  }

  a {
    margin: 0 space(8);
  }
}

.criteria_card--inner {
  @include for-tablet-landscape-up {
    padding: 0 !important;
  }
}

.service__information {
  @include for-tablet-landscape-up {
    background: $alabaster;
    border-radius: 19px;
    padding: space(32) !important;
    margin-top: space(16) !important;
  }
}

.service__offerings {
  font-size: $font-body-m;
  font-family: $font-secondary;
  margin-top: space(24);
  margin-bottom: space(40) !important;

  span {
    color: $lynch;
  }

  svg {
    color: $downy;
    margin: space(8);
  }
}

.service__heading {
  @include for-tablet-landscape-up {
    padding-left: 40px !important;
    margin-bottom: space(32);
  }
}

